# advent-of-code

./: .gitignore  README.md  aoc  template.py  watch.py
aoctools/: pyproject.toml
aoctools/src/aoc/: __init__.py
