[project]
name = "advent-of-code"
version = "0.0.1"
authors = [
  { name="David W. Ludwig II", email="davidludwigii@gmail.com" }
]
description = "Advent of code tools"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
dependencies = [
	"matplotlib",
	"numpy",
	"pqdict",
	"regex",
	"scipy"
]

[project.urls]
"Homepage" = "https://github.com/SirDavidLudwig/advent-of-code"
"Bug Tracker" = "https://github.com/SirDavidLudwig/advent-of-code/issues"

[tool.ruff]
line-length = 100
